# starter-kit

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy_dags.yaml
chapter2/: 01_data_export.py  02_ranking.sql  03_create_category_ranking.py  README.md
chapter3/: README.md
chapter3/api/: fastapi_example.py  main.py
chapter3/client/: index.html
chapter3/job/: main.py
chapter4/: README.md  chi2_test.py  t_test.py
chapter5/: README.md
chapter5/dags/: chapter2_01_data_export.py  chapter2_02_ranking.sql  chapter2_03_create_category_ranking.py  chapter3_api_data_uploader.py  sample.py
chapter6/: README.md  dwh_items.sql  dwh_transactions.sql  dwh_transactions_combined.sql  dwh_users.sql  exampes.sql  sales_ranking.sql  sales_ranking_dwh.sql
chapter7/: README.md
chapter7/handson1/: README.md
chapter7/handson1/agg_api/: apikey.py  cloudrun_client.py  main.py
chapter7/handson1/kv_api/: main.py
chapter7/handson1/kv_job/: main.py  purchased.sql
chapter7/handson2/: README.md  main.py
chapter7/handson2/suggest_model/: constants.py  model.py  train.py  user_features.sql
chapter7/handson2/suggest_model/cooccurences/: female.csv  male.csv  none.csv
data/: items.csv  queries.csv  raw_items.csv  raw_transactions.20211229.csv  raw_transactions.20211230.csv  raw_transactions.20211231.csv  raw_users.csv  users.csv
hack/: format
